# schtest

./: .gitignore  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  README.md  pyproject.toml  requirements.in  requirements.txt
.beads/: config.yaml
.beads/issues/: bd-1.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_SUMMARY.md  cgroup_workload_design.md  parameterized_arbitrary.md
scripts/: .gitignore  Makefile  README.md  analyze_results.py  benchmark_mode.py  mem_balance.py  parse_topo.py  pyproject.toml  requirements.in  requirements.txt  sched_monitor.py  setup_sudo.sh  stressor.py  test_experiment.py  test_parse_topology_pytest.py
scripts/tests/: test_parse_topology.py
scripts/tests/topos/: server.xml  simple.xml  workstation.xml
src/: main.rs
src/cases/: basic.rs  cgroup_tree.rs  fairness.rs  irq.rs  latency.rs  mod.rs  topology.rs
src/util/: cgroups.rs  child.rs  clock.rs  memfd.rs  sched.rs  shared.rs  stats.rs  system.rs
src/workloads/: benchmark.rs  cgroup_tree.rs  cgroup_tree_README.md  context.rs  mod.rs  process.rs  semaphore.rs  spinner.rs  spinner_utilization.rs
