[package]
name = "schtest"
version = "0.1.0"
edition = "2021"
description = "Scheduler testing framework"
authors = ["Original authors of schtest"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
nix = { version = "0.27", features = ["user", "mman", "fs", "process", "signal", "sched"] }
libc = "0.2"
crossbeam = "0.8"
parking_lot = "0.12"
num_cpus = "1.16"
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-error = "0.1"
inventory = "0.3"
libtest-with = "0.8.1-6"
tdigest = "0.2.3"
more-asserts = "0.3"
criterion = "0.5"
term_size = "0.3.2"
once_cell = "1.21.3"
procfs = "0.17"
cgroups-rs = "0.4.0"
quickcheck = "1.0"

[dev-dependencies]
rstest = "0.18"

[lib]
name = "schtest"
path = "src/lib.rs"

[[bin]]
name = "schtest"
path = "src/main.rs"

[[bin]]
name = "benchmark_cpu"
path = "src/bin/benchmark_cpu.rs"
